fixed the overflow issue again

--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@ Soft Gray:
   }
  
   .dark {
-    --background: 224 71.4% 4.1%;
+    --background: 255 100% 0%;
     --foreground: 210 20% 98%;
     --card: 224 71.4% 4.1%;
     --card-foreground: 210 20% 98%;
